# STM32_Projects

./: README.md  build.sh  makefile
Led/: Led.map  main.map
Megadrive_HID/: .directory  Makefile  README  UC_Prog.h  build.sh  megadrive-hid-bootldr.c  megadrive-hid.c  pinout.h  stm32-tx-hid-bootldr.c  stm32-tx-hid.c
Megadrive_HID/MdDumper/: .build.sh.swp  MD_Dumper.c  Makefile  build.sh  couleurs.h  rawhid_test.c
Megadrive_USB2/: Makefile  build.sh
Megadrive_USB2/Release/Linux/: Sega_Dumper
Megadrive_USB2/Software/: Sega_Dumper  main.c
Megadrive_USB2/Software/backup/: CMakeLists.txt  Makefile  Toolchain-Ubuntu-mingw64.cmake  main.c  notes.txt
Megadrive_USB2/Software/backup2/: main.c
Megadrive_USB2/backup/: USB2_Dumper.c
Megadrive_USB2/backup2/: USB2_Dumper.c
Megadrive_USB2/src/: USB2_Dumper.c
Megadrive_USB2/src/backup/: Sega_Dumper.c  USB2_Dumper.c
SMS_Dumper/soft/: Makefile  SMS_dumper.c  SMS_dumper_v0  SMS_dumper_v0.c  build.sh  hid_MACOSX.c
SMS_Dumper/stm32/: Makefile  build.sh  smsdumper_stm32.c  smsdumper_stm32.elf  smsdumper_stm32_bootldr.elf
Snes_HID/: Makefile  README  build.sh  pinout.h  snes-hid.c
Snes_HID/Snes_Dumper/: Makefile  Snes_Dumper  Snes_Dumper.c  hid_WINDOWS.c
Snes_HID/Snes_Dumper/Linux/: Snes_Dumper
Src/: main.c
WonderSwan_Dumper/: Makefile  build.sh
WonderSwan_Dumper/Software/: CMakeLists.txt  main.c
WonderSwan_Dumper/Software/code fab/: main.c
WonderSwan_Dumper/src/: USB2_Dumper.c
WonderSwan_Dumper/src/code fab/: USB2_Dumper.c
YAGB/Software/: Toolchain-Ubuntu-mingw64.cmake  main.c
YAGB/src/: USB2_Dumper.c
